# wordle-solver

./: .gitignore  README.md  pyproject.toml
data/: words.txt
tests/: test_wordle.py
wordle/: entity.py  gateway.py  main.py  presenter.py  usecase.py  wordle.py
