[tool.poetry]
name = "wordle"
version = "0.1.0"
description = ""
authors = ["corin <corinlwilkins@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pytest-watch = "^4.2.0"
pytest = "^7.1.2"
click = "^8.1.3"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
main = "wordle.main:find"